deploy/random-gif.yml
---
apiVersion: v1
kind: Service
metadata:
  name: random-gif
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: random-gif
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: random-gif
  labels:
    app: random-gif
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: random-gif
    spec:
      imagePullSecrets:
        - name: nexus
      containers:
      - name: random-gif
        imagePullPolicy: Always
        image: whereismyjetpack/random-gif:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
