deploy/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-gif-develop
  labels:
    app: random-gif
    ref: develop
spec:
  rules:
    - host: develop-random-gif.dsrd.libraries.psu.edu
      http:
        paths:
          - path: /
            backend:
              serviceName: random-gif-develop
              servicePort: 8080
